# linuxcnc

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
cmake/: FindEpoxy.cmake  LibFindMacros.cmake  buildcomponent.cmake  buildoptions.cmake  pythonBinary.cmake
debian/: configure  control.top.in  copyright  rules.in
docs/: po4a.cfg
docs/man/man9/: hostmot2.9  sserial.9
docs/src/: Submakefile  index.tmpl
docs/src/config/: python-interface.adoc
docs/src/gui/: qtvcp.adoc
docs/src/plasma/: qtplasmac.adoc
lib/python/gladevcp/: drowidget.py
scripts/: CMakeLists.txt  activate-linuxcnc.sh  linuxcnc-python  start-linuxcnc.sh
src/: Makefile  configure.ac
src/emc/: CMakeLists.txt
src/emc/canterp/: CMakeLists.txt  canterp.cc
src/emc/ini/: CMakeLists.txt
src/emc/iotask/: CMakeLists.txt
src/emc/kinematics/: CMakeLists.txt
src/emc/motion/: CMakeLists.txt  usrmotintf.cc
src/emc/motion-logger/: CMakeLists.txt
src/emc/nml_intf/: CMakeLists.txt  emccfg.h  emcglb.c
src/emc/pythonplugin/: CMakeLists.txt
src/emc/rs274ngc/: CMakeLists.txt  interp_base.cc  interp_g7x.cc  interp_internal.hh  interp_o_word.cc  interpmodule.cc  rs274ngc_interp.hh  rs274ngc_pre.cc
src/emc/sai/: CMakeLists.txt  driver.cc
src/emc/task/: CMakeLists.txt  emccanon.cc  emcsvr.cc
src/emc/tooldata/: CMakeLists.txt
src/emc/tp/: CMakeLists.txt
src/emc/usr_intf/: CMakeLists.txt  emclcd.cc  emcsh.cc  shcom.cc
src/emc/usr_intf/axis/: CMakeLists.txt
src/emc/usr_intf/axis/extensions/: emcmodule.cc
src/hal/: CMakeLists.txt  hal_lib.c
src/hal/classicladder/: CMakeLists.txt
src/hal/components/: CMakeLists.txt
src/hal/drivers/: CMakeLists.txt
src/hal/drivers/mesa-hostmot2/: hostmot2.c  hostmot2.h
src/hal/user_comps/: CMakeLists.txt
src/hal/user_comps/huanyang-vfd/: CMakeLists.txt
src/hal/user_comps/mb2hal/: CMakeLists.txt
src/hal/user_comps/pi500_vfd/: CMakeLists.txt
src/hal/user_comps/vfdb_vfd/: CMakeLists.txt
src/hal/user_comps/vfs11_vfd/: CMakeLists.txt
src/hal/user_comps/vismach/: CMakeLists.txt
src/hal/user_comps/wj200_vfd/: CMakeLists.txt
src/hal/user_comps/xhc-whb04b-6/: CMakeLists.txt
src/hal/utils/: halcmd.c  halcmd_commands.cc  halcmd_main.c  halrmt.c  meter.c  miscgtk.c  scope.c  scope_disp.c  scope_files.c  scope_horiz.c  scope_trig.c  scope_usr.h  scope_vert.c
src/libnml/: CMakeLists.txt
src/libnml/buffer/: CMakeLists.txt
src/libnml/cms/: CMakeLists.txt
src/libnml/inifile/: CMakeLists.txt  inifile.cc  inivar.cc
src/libnml/linklist/: CMakeLists.txt
src/libnml/nml/: CMakeLists.txt
src/libnml/os_intf/: CMakeLists.txt
src/libnml/posemath/: CMakeLists.txt
src/libnml/rcs/: CMakeLists.txt
src/module_helper/: CMakeLists.txt  module_helper.c
src/po/: cs.po  da.po  de.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  linuxcnc.pot  nb.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  tr.po  vi.po  zh_CN.po  zh_HK.po  zh_TW.po
src/po/gmoccapy/: cs.po  da.po  de.po  es.po  fi.po  fr.po  gmoccapy.pot  hu.po  it.po  ja.po  nb.po  pl.po  ro.po  ru.po  sk.po  sr.po  tr.po  vi.po  zh_CN.po
src/rtapi/: CMakeLists.txt  uspace_common.h  uspace_rtapi_app.cc
tcl/: CMakeLists.txt
