add_subdirectory(canterp)
add_subdirectory(ini)
add_subdirectory(iotask)
add_subdirectory(kinematics)
add_subdirectory(motion)
add_subdirectory(motion-logger)
add_subdirectory(nml_intf)
add_subdirectory(pythonplugin)
add_subdirectory(rs274ngc)
add_subdirectory(sai)
add_subdirectory(task)
add_subdirectory(tooldata)
add_subdirectory(tp)
add_subdirectory(usr_intf)
