add_executable(rs274
        saicanon.cc
        driver.cc
        dummyemcstat.cc
        ../task/taskclass.cc
        )
target_link_libraries(rs274
        PRIVATE
        Python3::Python
        readline
        rs274ngc
        linuxcnc
        pythonplugin
        hal
        nml
        emc_nmlintf
        emc_tooldata
        )
target_include_directories(rs274 PUBLIC .)
get_uspace_config(rs274)
